--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Jonathan Lau Wei Zhong"
   avatar           : "profile.jpg"
-  bio              : "Wei hao hei wao"
+  bio              : "PhD student at the Centre for Quantum Technologies"
   location         : "Singapore"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
