--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,7 @@ main:
   - title: "CV"
     url: /cv/
 
-  - title: "Projects and Research"
+  - title: "Notes and Research"
     url: /research/
 
   #- title: "Guide"
