--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Quant Projects"
-    url: /portfolio/
+  #- title: "Quant Projects"
+  #  url: /portfolio/
         
   - title: "Personal Blog Posts"
     url: /year-archive/
@@ -18,7 +18,7 @@ main:
   - title: "CV"
     url: /cv/
 
-  - title: "Notes and Research"
+  - title: "Projects and Research"
     url: /research/
 
   #- title: "Guide"
